package PS;
import "proto/node.proto";
import "proto/range.proto";
import "proto/app.proto";
import "proto/linear_method.proto";
import "proto/filter.proto";

message Task {
  enum Type {
    TERMINATE = 1;
    TERMINATE_CONFIRM = 2;
    REPLY = 3;
    MANAGE = 4;
    CALL_CUSTOMER = 5;
    HEARTBEATING = 6;
  }
  required Type type = 1;
  // whether request or reply message
  optional bool request = 2 [default = false];
  // will not send a reply message if true
  optional bool do_not_reply = 3 [default = false];
  // the customer name
  optional string customer = 4;

  // time
  optional int32 time = 5;
  optional int32 wait_time = 6 [default = -1];

  // the key range of this task
  optional PbRange key_range = 7;
  // namespace of keys
  optional int32 key_channel = 8;
  // indiciate whether or not has the key list
  optional bool has_key = 9 [default = false];

  enum DataType {
    OTHER = 0;
    INT8 = 1;
    INT16 = 2;
    INT32 = 3;
    INT64 = 4;
    UINT8 = 5;
    UINT16 = 6;
    UINT32 = 7;
    UINT64 = 8;
    FLOAT = 9;
    DOUBLE = 10;
  }
  optional DataType key_type = 13;
  repeated DataType value_type = 14;

  repeated FilterConfig filter = 12;
  // general task
  optional bytes msg = 101;
  optional ManageNode mng_node = 102;
  optional ManageApp mng_app = 103;

  // parameters
  optional CallSharedPara shared_para = 201;

  // applications
  optional LM.Call linear_method = 301;
  optional CallSketch sketch = 302;
}

message ManageNode {
  enum Command {
    INIT = 1;
    ADD = 4;
    REPLACE = 2;
    REMOVE = 3;
  }
  required Command cmd = 1;
  repeated Node node = 2;
  // optional int num_workers = 3;
  // optional int num_servers = 4;
}

message ManageApp {
  enum Command {
    ADD = 1;
    REMOVE = 2;
  }
  required Command cmd = 1;
  required AppConfig app_config = 2;
}

message Timestamp {
  required string sender = 1;
  required int32 time = 2;
}

message CallSharedPara {
  enum Command {
    PUSH = 1;
    PULL = 2;
  }
  required Command cmd= 1;

  optional bool insert_key_freq = 3;
  optional int32 query_key_freq = 4;

  optional bool insert_key = 5;

  optional int32 countmin_n = 6;
  optional int32 countmin_k = 7;

  // it's a replica request
  optional bool replica = 10;
  repeated Timestamp backup = 11;
}

message CallSketch {
  enum Command {
    PREPARE_DATA = 1;
    INSERT_DATA = 2;
    EVAL_PROGRESS = 3;
    QUERY_DATA = 4;
    RECOVER = 5;
  }
  required Command cmd = 1;
  optional PbRange key = 2;
}

message SketchResponse {
  optional string nodeid = 1;
  optional double process_time = 2;
  optional uint32 payload = 3;
  optional uint32 key = 4;
}
